# space-invaders

./: CMakeLists.txt
assets/shaders/: vertex.glsl
src/: main.c
src/engine/: engine.c  engine.h
src/engine/renderer/: renderer-internal.h  renderer.c  renderer.h
src/engine/scene/: scene-manager.h  scene.c  scene.h
src/engine/time/: time-internal.h  time.c  time.h
src/engine/util/: dynamic-array.c  dynamic-array.h  error.h  file.c  file.h  types.h
